Minor fixes at process icons on mobile

--- a/_sass/base/_timeline.scss
+++ b/_sass/base/_timeline.scss
@@ -106,6 +106,10 @@
     * {
       display: table;
       margin: 20px auto;
+
+      @include media($screen-small) {
+        @include size(45%);
+      }
     }
   }
 
